[gd_scene load_steps=2 format=3 uid="uid://bji7steebfjoj"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_1g5bi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 32.0
offset_right = -473.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g5bi")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 55.0
offset_right = 151.0
offset_bottom = 96.0
text = "Start"

[node name="ExitButton" type="Button" parent="."]
offset_left = 54.0
offset_top = 173.0
offset_right = 150.0
offset_bottom = 214.0
text = "Quit"

[node name="LevelSelectList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 50.0
offset_right = 451.0
offset_bottom = 217.0
allow_reselect = true
